--- a/eventEmit/index.html
+++ b/eventEmit/index.html
@@ -1,81 +1,92 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>event</title>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-</head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+    />
+  </head>
 
-<body class="nav-md">
+  <body class="nav-md">
     <!-- <div id="app">
         <input type="file" id='input'>
     </div> -->
     <div id="okc" style="width:100%; height: 60px; background: red"></div>
     <script>
-        // document.querySelector('#input').onchange = function (e) {
-        //     var oFile = document.querySelector('#input').files[0];
-        //     var file = new FileReader()
-        //     file.readAsDataURL(oFile);
-        //     file.onload = function (eFile) {}
-        // }
-        Function.prototype.myCall = function (context) {
-            var context = context || window
-            // 给 context 添加一个属性
-            // getValue.call(a, 'yck', '24') => a.fn = getValue
-            context.fn = this
-            // 将 context 后面的参数取出来
-            var args = [...arguments].slice(1)
-            // getValue.call(a, 'yck', '24') => a.fn('yck', '24')
-            var result = context.fn(...args)
-            // 删除 fn
-            delete context.fn
-            return result
-        }
+      // document.querySelector('#input').onchange = function (e) {
+      //     var oFile = document.querySelector('#input').files[0];
+      //     var file = new FileReader()
+      //     file.readAsDataURL(oFile);
+      //     file.onload = function (eFile) {}
+      // }
+      Function.prototype.myCall = function(context) {
+        var context = context || window;
+        // 给 context 添加一个属性
+        // getValue.call(a, 'yck', '24') => a.fn = getValue
+        context.fn = this;
+        // 将 context 后面的参数取出来
+        var args = [...arguments].slice(1);
+        // getValue.call(a, 'yck', '24') => a.fn('yck', '24')
+        var result = context.fn(...args);
+        // 删除 fn
+        delete context.fn;
+        return result;
+      };
 
-        function debounce(func, wait) {
-            var timeout;
-            return function () {
-                clearTimeout(timeout)
-                timeout = setTimeout(func, wait);
-            }
-        }
+      function debounce(func, wait) {
+        var timeout;
+        return function() {
+          clearTimeout(timeout);
+          timeout = setTimeout(func, wait);
+        };
+      }
 
-        function getUserAction() {
-            console.log('123')
-        }
+      function getUserAction() {
+        console.log('123');
+      }
 
-        
-        document.querySelector('#okc').onmousemove = debounce(getUserAction, 1000);
+      document.querySelector('#okc').onmousemove = debounce(
+        getUserAction,
+        1000
+      );
     </script>
-      <script>
-        function eventTnt() {
-          this.eventList = {} //保存事件的列表
+    <script>
+      function eventTnt() {
+        this.eventList = {}; //保存事件的列表
+      }
+      eventTnt.prototype.on = function() {
+        var arg = arguments;
+        var currentEvent = Array.prototype.shift.call(arguments);
+        if (!this.eventList[currentEvent]) {
+          this.eventList[currentEvent] = [];
         }
-        eventTnt.prototype.on = function () {
-          var arg = arguments
-          var currentEvent = Array.prototype.shift.call(arguments);
-          if (!this.eventList[currentEvent]) {
-            this.eventList[currentEvent] = []
-          }
-          this.eventList[currentEvent].push(Array.prototype.shift.call(arguments))
+        this.eventList[currentEvent].push(
+          Array.prototype.shift.call(arguments)
+        );
+      };
+      eventTnt.prototype.emit = function() {
+        var key = Array.prototype.shift.call(arguments);
+        var fn = this.eventList[key];
+        for (var i = 0; i < fn.length; i++) {
+          fn[i].apply(this, arguments);
         }
-        eventTnt.prototype.emit = function () {
-          var key = Array.prototype.shift.call(arguments);
-          var fn = this.eventList[key]
-          for (var i = 0; i < fn.length; i++) {
-            fn[i].apply(this, arguments)
-          }
-        }
-        var tntEmit = new eventTnt()
-        tntEmit.on('test', function (kk) {
-          console.log('123', kk)
-        })
-        tntEmit.emit('test', 'ooo')
-      </script>
-</body>
-
+      };
+      var tntEmit = new eventTnt();
+      tntEmit.on('test', function(kk) {
+        console.log('123', kk);
+      });
+      tntEmit.emit('test', 'ooo');
+      // Notification.requestPermission().then(function(result) {
+      //    let a = new Notification('通知')
+      // });
+    </script>
+  </body>
 </html>
