--- a/js-learn/test.html
+++ b/js-learn/test.html
@@ -49,28 +49,14 @@
           j++;
         }
       }
-      function moveZeroToLast(arr) {
-        let index = 0;
-        for (let i = 0, length = arr.length; i < length; i++) {
-          if (arr[i] === 0) {
-            index++;
-          } else if (index !== 0) {
-            arr[i - index] = arr[i];
-            arr[i] = 0;
-          }
-        }
-        return arr;
-      }
-      let all3 = moveZeroToLast(testArr);
-
-      console.log('all3', all3);
+     
 
       let newArr = [2, 7, 18, 4, 8, 5, 1];
       function add(arr) {
         let tempArr = [];
-        console.log(arr)
-        for (let i = 0; i < arr.length; i++) {
-          for (let j = i+1; j < arr.length; j++) {
+        console.log(arr);
+        for (let i = 0; i < arr.length - 1; i++) {
+          for (let j = i + 1; j < arr.length - 1; j++) {
             console.log(i, j, arr[i] + arr[j]);
             if (arr[i] + arr[j] === 9) {
               tempArr.push([i, j]);
