--- a/js-learn/test.html
+++ b/js-learn/test.html
@@ -49,7 +49,6 @@
           j++;
         }
       }
-     
 
       let newArr = [2, 7, 18, 4, 8, 5, 1];
       function add(arr) {
@@ -66,6 +65,70 @@
         return tempArr;
       }
       console.log('add===', add(newArr));
+
+      class ListNode {
+        constructor(key) {
+          this.next = null;
+          this.key = key;
+        }
+      }
+
+      class List {
+        constructor() {
+          this.head = null;
+          this.length = 0;
+        }
+
+        static createNode(key) {
+          return new ListNode(key);
+        }
+
+        // 往头部插入数据
+        insert(node) {
+          // 如果head后面有指向的节点
+          if (this.head) {
+            node.next = this.head;
+          } else {
+            node.next = null;
+          }
+          this.head = node;
+          this.length++;
+        }
+
+        find(key) {
+          let node = this.head;
+          while (node !== null && node.key !== key) {
+            node = node.next;
+          }
+          return node;
+        }
+
+        delete(node) {
+          if (this.length === 0) {
+            throw 'node is undefined';
+          }
+
+          if (node === this.head) {
+            this.head = node.next;
+            this.length--;
+            return;
+          }
+
+          let prevNode = this.head;
+
+          while (prevNode.next !== node) {
+            prevNode = prevNode.next;
+          }
+
+          if (node.next === null) {
+            prevNode.next = null;
+          }
+          if (node.next) {
+            prevNode.next = node.next;
+          }
+          this.length--;
+        }
+      }
     </script>
   </body>
 </html>
