--- a/js-learn/vueObserver.html
+++ b/js-learn/vueObserver.html
@@ -60,7 +60,8 @@
     }
     var abc = {
       a: 12,
-      b: 90
+      b: 90,
+      c: {}
     }
     class watcher{
       constructor(){
@@ -69,6 +70,7 @@
     }
     observe(abc)
     abc.a = 1234
+    abc.c = {kk:13}
   </script>
 </body>
 
