--- a/test.html
+++ b/test.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
+  <body>
+    <script>
+      function curry(fn, args) {
+        var length = fn.length;
+        console.log('length', length);
 
-<body>
-  <script>
-    function curry(fn, args) {
-  var length = fn.length;
-  console.log('length',length)
+        args = args || [];
 
-  args = args || [];
+        return function() {
+          var _args = args.slice(0),
+            arg,
+            i;
 
-  return function() {
+          for (i = 0; i < arguments.length; i++) {
+            arg = arguments[i];
 
-      var _args = args.slice(0),
-
-          arg, i;
-
-      for (i = 0; i < arguments.length; i++) {
-
-          arg = arguments[i];
-
-          _args.push(arg);
-
+            _args.push(arg);
+          }
+          if (_args.length < length) {
+            return curry.call(this, fn, _args);
+          } else {
+            return fn.apply(this, _args);
+          }
+        };
       }
-      if (_args.length < length) {
-          return curry.call(this, fn, _args);
-      }
-      else {
-          return fn.apply(this, _args);
-      }
-  }
-}
 
+      var fn = curry(function(a, b, c) {
+        console.log(a + b + c);
+      });
 
-var fn = curry(function(a, b, c) {
-  console.log(a+ b+ c);
-});
+      // fn(1,2,3)
+      // fn(1,2)(1)(4)
+      // console.log('fn', fn)
+      // var atest = fn(1,2,3)
+      // console.log(atest)
 
-// fn(1,2,3)
-fn(1,2)(1)(4)
-// console.log('fn', fn)
-// var atest = fn(1,2,3)
-// console.log(atest)
-  </script>
-</body>
+      // Promise.resolve().then(()=>{
+      //   return aaa
+      // }).catch((res)=>{
+      //   console.log('1===', res)
+      // }).then(()=>{
+      //   console.log('124')
+      //   return '124'
+      // }).catch((res)=>{
+      //   console.log('2',res)
+      // })
 
+      Promise.resolve()
+        .then(() => {
+          return aaa;
+        })
+        .then(
+          () => {},
+          res => {
+            console.log('1===', res);
+          }
+        )
+        .then(() => {
+          console.log('124');
+          return '124';
+        })
+        .catch(res => {
+          console.log('2===', res);
+        });
+    </script>
+  </body>
 </html>
